--- a/package.json
+++ b/package.json
@@ -18,30 +18,30 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^2.0.2",
-        "@sveltejs/kit": "^1.16.3",
+        "@sveltejs/adapter-static": "^2.0.3",
+        "@sveltejs/kit": "^1.22.4",
         "@tailwindcss/typography": "^0.5.9",
-        "@types/node": "^20.1.3",
+        "@types/node": "^20.4.7",
         "autoprefixer": "^10.4.14",
         "clipboardy": "^3.0.0",
         "cssnano": "^6.0.1",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.3.1",
         "gh-pages": "^5.0.0",
         "gray-matter": "^4.0.3",
-        "mdsvex": "^0.10.6",
-        "postcss": "^8.4.23",
+        "mdsvex": "^0.11.0",
+        "postcss": "^8.4.27",
         "postcss-load-config": "^4.0.1",
-        "prettier": "^2.8.8",
-        "prettier-plugin-jsdoc": "^0.4.2",
-        "prettier-plugin-svelte": "^2.10.0",
+        "prettier": "^3.0.1",
+        "prettier-plugin-jsdoc": "^1.0.1",
+        "prettier-plugin-svelte": "^3.0.3",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.3",
-        "svelte": "^3.59.1",
-        "tailwindcss": "^3.3.2",
+        "svelte": "^4.1.2",
+        "tailwindcss": "^3.3.3",
         "title-case": "^3.0.3",
-        "tslib": "^2.5.0",
-        "typescript": "^5.0.4",
-        "vite": "^4.3.5"
+        "tslib": "^2.6.1",
+        "typescript": "^5.1.6",
+        "vite": "^4.4.8"
     },
     "type": "module",
     "dependencies": {
@@ -50,7 +50,6 @@
     "prettier": {
         "semi": false,
         "singleQuote": true,
-        "tabWidth": 4,
-        "trailingComma": "all"
+        "tabWidth": 4
     }
 }
