--- a/package.json
+++ b/package.json
@@ -19,30 +19,29 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^2.0.3",
-        "@sveltejs/kit": "^1.22.4",
-        "@tailwindcss/typography": "^0.5.9",
-        "@types/node": "^20.4.7",
-        "autoprefixer": "^10.4.14",
+        "@sveltejs/kit": "^1.25.0",
+        "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "^20.6.2",
+        "autoprefixer": "^10.4.15",
         "clipboardy": "^3.0.0",
         "cssnano": "^6.0.1",
         "dotenv": "^16.3.1",
-        "gh-pages": "^5.0.0",
+        "gh-pages": "^6.0.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.11.0",
-        "postcss": "^8.4.27",
+        "postcss": "^8.4.30",
         "postcss-load-config": "^4.0.1",
-        "prettier": "^3.0.1",
-        "prettier-plugin-jsdoc": "^1.0.1",
+        "prettier": "^3.0.3",
+        "prettier-plugin-jsdoc": "^1.0.2",
         "prettier-plugin-svelte": "^3.0.3",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.3",
-        "svelte": "^4.1.2",
+        "svelte": "^4.2.0",
         "tailwindcss": "^3.3.3",
         "title-case": "^3.0.3",
-        "tslib": "^2.6.1",
-        "typescript": "^5.1.6",
-        "vite": "^4.4.8"
-    },
+        "tslib": "^2.6.2",
+        "typescript": "^5.2.2",
+        "vite": "^4.4.9"    },
     "type": "module",
     "dependencies": {
         "rfc4648": "^1.5.2"
