--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "vite build",
         "preview": "vite preview",
         "gh-pages": "pnpm run build && gh-pages -d build -b master -t",
+        "encrypt:text": "node --env-file .env scripts/encrypt-text.js",
         "lint": "prettier --check .",
         "format": "prettier --write ."
     },
@@ -25,7 +26,6 @@
         "autoprefixer": "^10.4.15",
         "clipboardy": "^3.0.0",
         "cssnano": "^6.0.1",
-        "dotenv": "^16.3.1",
         "gh-pages": "^6.0.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.11.0",
@@ -41,7 +41,8 @@
         "title-case": "^3.0.3",
         "tslib": "^2.6.2",
         "typescript": "^5.2.2",
-        "vite": "^4.4.9"    },
+        "vite": "^4.4.9"
+    },
     "type": "module",
     "dependencies": {
         "rfc4648": "^1.5.2"
