--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^2.0.3",
-        "@sveltejs/kit": "^1.30.4",
+        "@sveltejs/adapter-static": "^3.0.0",
+        "@sveltejs/kit": "^2.0.0",
+        "@sveltejs/vite-plugin-svelte": "^3.0.0",
         "@tailwindcss/typography": "^0.5.15",
-        "@types/node": "^20.16.5",
+        "@types/node": "^22.5.5",
         "autoprefixer": "^10.4.20",
-        "clipboardy": "^3.0.0",
-        "cssnano": "^6.1.2",
+        "clipboardy": "^4.0.0",
+        "cssnano": "^7.0.6",
         "gh-pages": "^6.1.1",
         "gray-matter": "^4.0.3",
-        "mdsvex": "^0.11.2",
+        "mdsvex": "^0.12.3",
         "postcss": "^8.4.45",
-        "postcss-load-config": "^4.0.2",
+        "postcss-load-config": "^6.0.1",
         "prettier": "^3.3.3",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-svelte": "^3.2.6",
@@ -38,10 +39,10 @@
         "qrcode": "^1.5.4",
         "svelte": "^4.2.19",
         "tailwindcss": "^3.4.11",
-        "title-case": "^3.0.3",
+        "title-case": "^4.3.1",
         "tslib": "^2.7.0",
         "typescript": "^5.6.2",
-        "vite": "^4.5.3"
+        "vite": "^5.0.0"
     },
     "type": "module",
     "dependencies": {
