--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "devDependencies": {
         "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
         "@tailwindcss/typography": "^0.5.15",
         "@types/node": "^22.5.5",
         "autoprefixer": "^10.4.20",
@@ -37,7 +37,7 @@
         "prettier-plugin-svelte": "^3.2.6",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
-        "svelte": "^4.2.19",
+        "svelte": "^5.0.0-next.246",
         "tailwindcss": "^3.4.11",
         "title-case": "^4.3.1",
         "tslib": "^2.7.0",
