--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-static": "^3.0.5",
-        "@sveltejs/kit": "^2.5.28",
-        "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.15.1",
+        "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@tailwindcss/typography": "^0.5.15",
-        "@types/node": "^22.7.1",
+        "@types/node": "^22.10.2",
         "autoprefixer": "^10.4.20",
         "clipboardy": "^4.0.0",
         "cssnano": "^7.0.6",
-        "gh-pages": "^6.1.1",
+        "gh-pages": "^6.2.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.12.3",
-        "postcss": "^8.4.47",
+        "postcss": "^8.4.49",
         "postcss-load-config": "^6.0.1",
-        "prettier": "^3.3.3",
+        "prettier": "^3.4.2",
         "prettier-plugin-jsdoc": "^1.3.0",
-        "prettier-plugin-svelte": "^3.2.6",
+        "prettier-plugin-svelte": "^3.3.2",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
-        "svelte": "5.0.0-next.259",
-        "tailwindcss": "^3.4.13",
+        "svelte": "^5.16.0",
+        "tailwindcss": "^3.4.17",
         "title-case": "^4.3.2",
-        "tslib": "^2.7.0",
-        "typescript": "^5.6.2",
-        "vite": "^5.4.8"
+        "tslib": "^2.8.1",
+        "typescript": "^5.7.2",
+        "vite": "^6.0.6"
     },
     "type": "module",
     "dependencies": {
-        "rfc4648": "^1.5.3"
+        "rfc4648": "^1.5.4"
     },
     "prettier": {
         "semi": false,
