--- a/package.json
+++ b/package.json
@@ -20,29 +20,29 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.15.1",
+        "@sveltejs/kit": "^2.20.1",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
-        "@tailwindcss/typography": "^0.5.15",
-        "@types/node": "^22.10.5",
-        "autoprefixer": "^10.4.20",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/node": "^22.13.10",
+        "autoprefixer": "^10.4.21",
         "clipboardy": "^4.0.0",
         "cssnano": "^7.0.6",
         "gh-pages": "^6.3.0",
         "gray-matter": "^4.0.3",
         "mdsvex": "^0.12.3",
-        "postcss": "^8.4.49",
+        "postcss": "^8.5.3",
         "postcss-load-config": "^6.0.1",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.3",
         "prettier-plugin-jsdoc": "^1.3.2",
-        "prettier-plugin-svelte": "^3.3.2",
+        "prettier-plugin-svelte": "^3.3.3",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
-        "svelte": "^5.16.2",
+        "svelte": "^5.23.2",
         "tailwindcss": "^3.4.17",
         "title-case": "^4.3.2",
         "tslib": "^2.8.1",
-        "typescript": "^5.7.2",
-        "vite": "^6.0.7"
+        "typescript": "^5.8.2",
+        "vite": "^6.2.2"
     },
     "type": "module",
     "dependencies": {
@@ -56,6 +56,11 @@
         "plugins": [
             "prettier-plugin-svelte",
             "prettier-plugin-jsdoc"
+        ]
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "esbuild"
         ]
     }
 }
