--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.20.8",
+        "@sveltejs/kit": "^2.21.0",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@tailwindcss/typography": "^0.5.16",
-        "@tailwindcss/vite": "^4.1.5",
-        "@types/node": "^22.15.3",
+        "@tailwindcss/vite": "^4.1.7",
+        "@types/node": "^22.15.18",
         "clipboardy": "^4.0.0",
         "gh-pages": "^6.3.0",
         "gray-matter": "^4.0.3",
-        "mdsvex": "^0.12.5",
+        "mdsvex": "^0.12.6",
         "prettier": "^3.5.3",
         "prettier-plugin-jsdoc": "^1.3.2",
-        "prettier-plugin-svelte": "^3.3.3",
+        "prettier-plugin-svelte": "^3.4.0",
         "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
-        "svelte": "^5.28.2",
-        "tailwindcss": "^4.1.5",
+        "svelte": "^5.30.1",
+        "tailwindcss": "^4.1.7",
         "title-case": "^4.3.2",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
-        "vite": "^6.3.4"
+        "vite": "^6.3.5"
     },
     "type": "module",
     "dependencies": {
@@ -57,6 +57,7 @@
     },
     "pnpm": {
         "onlyBuiltDependencies": [
+            "@tailwindcss/oxide",
             "esbuild"
         ]
     }
