--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
+        "@iconify-json/lucide": "^1.2.63",
         "@sveltejs/adapter-static": "^3.0.9",
         "@sveltejs/kit": "^2.36.1",
         "@sveltejs/vite-plugin-svelte": "^6.1.3",
@@ -39,6 +40,7 @@
         "tailwindcss": "^4.1.12",
         "title-case": "^4.3.2",
         "typescript": "^5.9.2",
+        "unplugin-icons": "^22.2.0",
         "vite": "^7.1.3"
     },
     "type": "module",
