--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "prettier-plugin-jsdoc": "^1.3.3",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "prism-themes": "^1.9.0",
         "qrcode": "^1.5.4",
+        "shiki": "^3.11.0",
         "svelte": "^5.38.2",
         "tailwindcss": "^4.1.12",
         "title-case": "^4.3.2",
