--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@types/node": "^24.3.0",
         "clipboardy": "^4.0.0",
         "gh-pages": "^6.3.0",
-        "mdsvex": "^0.12.6",
+        "markdoc-svelte": "^3.0.0",
         "prettier": "^3.6.2",
         "prettier-plugin-jsdoc": "^1.3.3",
         "prettier-plugin-svelte": "^3.4.0",
@@ -40,7 +40,8 @@
         "title-case": "^4.3.2",
         "typescript": "^5.9.2",
         "unplugin-icons": "^22.2.0",
-        "vite": "^7.1.3"
+        "vite": "^7.1.3",
+        "zod": "^4.1.0"
     },
     "type": "module",
     "prettier": {
