--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "@iconify-json/lucide": "^1.2.63",
+        "@markdoc/markdoc": "^0.5.4",
         "@sveltejs/adapter-static": "^3.0.9",
         "@sveltejs/kit": "^2.36.1",
         "@sveltejs/vite-plugin-svelte": "^6.1.3",
