--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "clipboardy": "^5.0.1",
         "gh-pages": "^6.3.0",
         "markdoc-svelte": "^3.0.0",
-        "prettier": "^3.7.0",
+        "prettier": "3.6.2",
         "prettier-plugin-jsdoc": "^1.5.0",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
