--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@iconify-json/lucide": "^1.2.76",
+        "@iconify-json/lucide": "^1.2.77",
         "@markdoc/markdoc": "^0.5.4",
         "@sveltejs/adapter-static": "^3.0.10",
-        "@sveltejs/kit": "^2.49.0",
+        "@sveltejs/kit": "^2.49.1",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.17",
@@ -31,17 +31,17 @@
         "gh-pages": "^6.3.0",
         "markdoc-svelte": "^3.0.0",
         "prettier": "3.6.2",
-        "prettier-plugin-jsdoc": "^1.5.0",
+        "prettier-plugin-jsdoc": "1.5.0",
         "prettier-plugin-svelte": "^3.4.0",
-        "prettier-plugin-tailwindcss": "^0.7.1",
+        "prettier-plugin-tailwindcss": "0.7.1",
         "qrcode": "^1.5.4",
-        "shiki": "^3.17.0",
-        "svelte": "^5.45.2",
+        "shiki": "^3.19.0",
+        "svelte": "^5.45.5",
         "tailwindcss": "^4.1.17",
         "title-case": "^4.3.2",
         "typescript": "^5.9.3",
         "unplugin-icons": "^22.5.0",
-        "vite": "^7.2.4",
+        "vite": "^7.2.6",
         "zod": "^4.1.13"
     },
     "type": "module",
