--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "vite build",
         "preview": "vite preview",
         "gh-pages": "gh-pages -d build -b master -t",
+        "update-skills": "node scripts/update-skills.ts",
         "encrypt:text": "node --env-file .env scripts/encrypt-text.js",
         "lint": "prettier --check .",
         "format": "prettier --write ."
@@ -64,7 +65,6 @@
         ]
     },
     "dependencies": {
-        "bits-ui": "^2.15.4",
         "svelte-meta-tags": "^4.5.0"
     }
 }
