--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@iconify-json/lucide": "^1.2.85",
+        "@iconify-json/lucide": "^1.2.86",
         "@markdoc/markdoc": "^0.5.4",
         "@sveltejs/adapter-static": "^3.0.10",
-        "@sveltejs/enhanced-img": "^0.9.2",
-        "@sveltejs/kit": "^2.49.5",
+        "@sveltejs/enhanced-img": "^0.9.3",
+        "@sveltejs/kit": "^2.50.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.4",
         "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.18",
@@ -37,8 +37,10 @@
         "prettier-plugin-svelte": "^3.4.1",
         "prettier-plugin-tailwindcss": "^0.7.2",
         "qrcode": "^1.5.4",
+        "reading-time": "^1.5.0",
         "shiki": "^3.21.0",
         "svelte": "^5.46.4",
+        "svelte-meta-tags": "^4.5.0",
         "tailwindcss": "^4.1.18",
         "title-case": "^4.3.2",
         "typescript": "^5.9.3",
@@ -63,9 +65,5 @@
             "esbuild",
             "sharp"
         ]
-    },
-    "dependencies": {
-        "reading-time": "^1.5.0",
-        "svelte-meta-tags": "^4.5.0"
     }
 }
